--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,9 +39,10 @@ python = "<3.12,>=3.8"
 
 click = "^8.1.3"
 plotly = "^5.17.0"
-numpy = ">=1.22"
+numpy = "1.22"
 nmrglue = "^0.9"
-pandas = "2.0.0"
+pandas = "1.5.0"
+h5py = "^3.9.0"
 
 
 [tool.poetry.dev-dependencies]
@@ -104,7 +105,7 @@ extended_default_ignore = []
 
 [tool.flakeheaven.plugins]
 pyflakes = ["+*"]
-pycodestyle = ["+*"]
+pycodestyle = ["+*", "-W503", "-E203"]
 mccabe = ["+*"]
 flake8-annotations = ["+*", "-ANN1??", "-ANN401"]
 flake8-docstrings = ["+*", "-D212"]
