--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ numpy = "1.22"
 nmrglue = "^0.9"
 pandas = "1.5.0"
 h5py = "^3.9.0"
+invoke = "^2.2.0"
+nox = "^2023.4.22"
+nox-poetry = "^1.0.3"
 
 
 [tool.poetry.dev-dependencies]
