--- a/mypy.ini
+++ b/mypy.ini
@@ -1,8 +1,6 @@
-[mypy]
-
-[mypy-pytest,invoke.*,nox.*,nox_poetry.*]
+[mypy-pytest,invoke.*,nox.*,nox_poetry.*,nmrglue.*,scipy.*]
 allow_redefinition = false
-check_untyped_defs = true
+check_untyped_defs = false
 ignore_errors = false
 ignore_missing_imports = true
 implicit_reexport = false
