--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,4 @@
-[mypy-pytest,invoke.*,nox.*,nox_poetry.*,nmrglue.*,scipy.*]
+[mypy-pytest,invoke.*,nox.*,nox_poetry.*,nmrglue.*,scipy.*, pandas.*,plotly.*, h5py.*]
 allow_redefinition = false
 check_untyped_defs = false
 ignore_errors = false
