--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ nox-poetry = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.1.1"
-invoke = "^2.0.0"
+invoke = "^2.2.0"
 flake8 = ">=4.0.1,<5.0.0"
 flakeheaven = "^3.2.1"
 flake8-builtins = "^2.1.0"
@@ -120,6 +120,25 @@ pylint = ["-C????", "-E????", "+F????", "+I????", "-R????", "-W????"]
 
 [tool.flakeheaven.exceptions."tests/"]
 flake8-bandit = ["-S101"]
+
+[tool.mypy]
+warn_return_any = false
+warn_unused_configs = true
+
+[[tool.mypy.overrides]]
+module = ["pytest","invoke.*","nox.*","nox_poetry.*","nmrglue.*","scipy.*","pandas.*","plotly.*","h5py.*"]
+allow_redefinition = false
+check_untyped_defs = true
+ignore_errors = false
+ignore_missing_imports = true
+implicit_reexport = false
+local_partial_types = true
+strict_optional = true
+strict_equality = true
+no_implicit_optional = true
+warn_unused_ignores = true
+warn_unreachable = true
+warn_no_return = true
 
 [tool.isort]
 multi_line_output = 3
