--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ h5py = "^3.9.0"
 invoke = "^2.2.0"
 nox = "^2023.4.22"
 nox-poetry = "^1.0.3"
+ipykernel = "^6.27.1"
+nbformat = "^5.9.2"
 
 
 [tool.poetry.dev-dependencies]
@@ -101,10 +103,12 @@ directory = "htmlcov"
 
 [tool.flakeheaven]
 format = "grouped"
+exclude = ["demo_Proton.ipynb"]
 max_line_length = 99
 show_source = true
 docstring-convention = "google"
 extended_default_ignore = []
+
 
 [tool.flakeheaven.plugins]
 pyflakes = ["+*"]
