--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ nox = "^2023.4.22"
 nox-poetry = "^1.0.3"
 ipykernel = "^6.27.1"
 nbformat = "^5.9.2"
+pyflint = {git = "https://github.com/rserial/pyflint.git"}
 
 
 [tool.poetry.dev-dependencies]
@@ -103,7 +104,7 @@ directory = "htmlcov"
 
 [tool.flakeheaven]
 format = "grouped"
-exclude = ["demo_Proton.ipynb"]
+exclude = ["demo_Proton.ipynb", "demo_T2Bulk.ipynb"]
 max_line_length = 99
 show_source = true
 docstring-convention = "google"
