--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,6 @@ python = "<3.12,>=3.8"
 click = "^8.1.3"
 plotly = "^5.17.0"
 numpy = "1.22"
-nmrglue = "^0.9"
 pandas = "1.5.0"
 h5py = "^3.9.0"
 invoke = "^2.2.0"
@@ -49,6 +48,7 @@ nox-poetry = "^1.0.3"
 ipykernel = "^6.27.1"
 nbformat = "^5.9.2"
 pyflint = {git = "https://github.com/rserial/pyflint.git"}
+nmrglue = "0.09"
 
 
 [tool.poetry.dev-dependencies]
