--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ python = "<3.12,>=3.8"
 
 click = "^8.1.3"
 plotly = "^5.17.0"
-numpy = "1.22"
+numpy = "^1.22"
 pandas = "1.5.0"
 h5py = "^3.9.0"
 invoke = "^2.2.0"
