Improve repo organization

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -21,3 +21,15 @@ replace = {#}{#} [Unreleased]
 search = [Unreleased]: https://github.com/rserial/spinsolveproc/compare/v{current_version}...HEAD
 replace = [Unreleased]: https://github.com/rserial/spinsolveproc/compare/v{new_version}...HEAD
 	[{new_version}]: https://github.com/rserial/spinsolveproc/compare/v{current_version}...v{new_version}
+
+[bumpversion:file(version):CITATION.cff]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file(tag):CITATION.cff]
+search = https://github.com/rserial/spinsolveproc/releases/tag/v{current_version}
+replace = https://github.com/rserial/spinsolveproc/releases/tag/v{new_version}
+
+[bumpversion:file(description):CITATION.cff]
+search = description: The Software Heritage link for version {current_version}.
+replace = description: The Software Heritage link for version {new_version}.
