--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,12 +3,18 @@ updates:
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
-      interval: daily
+      interval: "monthly"
+      time: "08:00"
+      timezone: "Europe/Berlin"
   - package-ecosystem: pip
     directory: "/docs"
     schedule:
-      interval: daily
+      interval: "monthly"
+      time: "08:00"
+      timezone: "Europe/Berlin"
   - package-ecosystem: pip
     directory: "/"
     schedule:
-      interval: daily
+      interval: "monthly"
+      time: "08:00"
+      timezone: "Europe/Berlin"
