--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -10,30 +10,34 @@ jobs:
     name: autoupdate
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.3.0
+      - uses: actions/checkout@v4.1.6
 
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v4.5.0
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v5.1.0
         with:
-          python-version: 3.8
+          python-version: 3.9
 
-      - name: Install pre-commit
-        run: pip install pre-commit
+      - name: Install system deps
+        shell: bash
+        run: |
+          pip install poetry
+          poetry config virtualenvs.in-project true
+          poetry install --no-root --only dev --only linters --sync
 
       - name: Run autoupdate
-        run: pre-commit autoupdate
+        run: poetry run pre-commit autoupdate
 
       - name: Run pre-commit
-        run: pre-commit run --all-files
+        run: poetry run pre-commit run --all-files
 
-      - uses: peter-evans/create-pull-request@v4.2.3
+      - uses: peter-evans/create-pull-request@v6.0.5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: chore-update-pre-commit-hooks
           title: Update pre-commit hooks
           commit-message: "Update pre-commit hooks"
           body: |
-            # Update pre-commit hooks 
-            
+            # Update pre-commit hooks
+
             - Update pre-commit hooks to the latest version.
           delete-branch: true
