--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,25 +3,33 @@ name: tests
 on:
   push:
     branches:
+      - main
   pull_request:
     branches:
+      - main
 
 jobs:
   linting:
     name: Linting
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.3.0
+      - uses: actions/checkout@v4.1.6
 
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v4.5.0
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v5.1.0
         with:
-          python-version: 3.8
+          python-version: 3.9
+
+      - name: Install system deps
+        shell: bash
+        run: |
+          pip install poetry
+          poetry config virtualenvs.in-project true
+          poetry install --no-root --only dev --only linters --sync
 
       - name: Linting
-        run: |
-          pip install pre-commit
-          pre-commit run --all-files
+        shell: bash
+        run: poetry run pre-commit run --all-files
 
   tests:
     needs: linting
@@ -30,13 +38,13 @@ jobs:
     strategy:
       matrix:
         os: [Ubuntu, MacOS, Windows]
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11']
       fail-fast: true
     steps:
-      - uses: actions/checkout@v3.3.0
+      - uses: actions/checkout@v4.1.6
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4.5.0
+        uses: actions/setup-python@v5.1.0
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -55,27 +63,28 @@ jobs:
         shell: bash
         run: nox --force-color -s tests-${{ matrix.python-version }}
 
-      - name: Run safety check
+      - name: Run securtity check
         if: matrix.python-version == '3.11' && matrix.os == 'Ubuntu'
         shell: bash
-        run: nox --force-color -s safety
+        run: nox --force-color -s security
 
       - name: Upload coverage data
-        uses: actions/upload-artifact@v2.2.4
+        uses: actions/upload-artifact@v4.3.3
         with:
-          name: coverage-data
+          name: ${{ matrix.os }}-${{ matrix.python-version }}.coverage-data
           path: ".coverage.*"
+          retention-days: 2
 
   coverage:
     needs: tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.3.0
-      
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v4.5.0
+      - uses: actions/checkout@v4.1.6
+
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v5.1.0
         with:
-          python-version: 3.8
+          python-version: 3.9
 
       - name: Install system deps
         shell: bash
@@ -85,9 +94,10 @@ jobs:
           poetry config virtualenvs.in-project true
 
       - name: Download coverage data
-        uses: actions/download-artifact@v2.0.10
+        uses: actions/download-artifact@v4.1.7
         with:
-          name: coverage-data
+          pattern: "*.coverage-data"
+          merge-multiple: true
 
       - name: Create coverage report
         shell: bash
@@ -95,6 +105,6 @@ jobs:
           nox --force-color --session=coverage -- --fmt xml
 
       - name: Upload coverage report
-        uses: codecov/codecov-action@v2.0.2
+        uses: codecov/codecov-action@v4.4.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
