--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,34 +1,42 @@
+---
+default_install_hook_types:
+  - pre-commit
+  - post-checkout
+  - post-merge
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
     hooks:
       - id: check-toml
+      - id: check-json
       - id: check-yaml
       - id: debug-statements
       - id: check-merge-conflict
-      - id: check-json
+      - id: pretty-format-json
+        args: [--autofix, '--no-sort-keys']
+        exclude: .ipynb
       - id: end-of-file-fixer
--   repo: https://github.com/timothycrosley/isort
-    rev: 5.12.0
+      - id: trailing-whitespace
+        exclude: .bumpversion.cfg
+  - repo: https://github.com/timothycrosley/isort
+    rev: 5.13.2
     hooks:
       - id: isort
--   repo: https://github.com/psf/black
-    rev: 23.1.0
+  - repo: https://github.com/psf/black
+    rev: 24.4.2
     hooks:
       - id: black
--   repo: https://github.com/flakeheaven/flakeheaven
-    rev: 3.2.1
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.4.8
     hooks:
-      - id: flakeheaven
-        additional_dependencies: [
-          'flake8>=4.0.1,<5.0.0',
-          'flake8-builtins~=2.1.0',
-          'flake8-blind-except~=0.2.1',
-          'flake8-logging-format~=0.9.0',
-          'flake8-bugbear~=23.2.13',
-          'flake8-annotations~=2.9.1',
-          'flake8-docstrings~=1.7.0',
-          'flake8-bandit~=3.0.0',
-          'flake8-broken-line~=0.6.0',
-          'darglint~=1.8.1'
-        ]
+      - id: ruff
+        args: [ --fix ]
+  - repo: https://github.com/citation-file-format/cffconvert
+    rev: 5295f87c0e261da61a7b919fc754e3a77edd98a7
+    hooks:
+      - id: validate-cff
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.8.3
+    hooks:
+      - id: poetry-check
+      - id: poetry-install
