--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,8 @@
-
 [tool.poetry]
 name = "spinsolveproc"
 version = "0.1.0"
-description = "Python library to process Spinsolve NMR experiments"
+description = "Python library to process Spinsolve NMR experiments."
 authors = ["Raquel Serial <raquel.serial@tuhh.de>"]
-
 readme = "README.md"
 homepage = "https://github.com/rserial/spinsolveproc"
 repository = "https://github.com/rserial/spinsolveproc"
@@ -13,73 +11,59 @@ keywords = ["spinsolveproc"]
 classifiers=[
     "Development Status :: 2 - Pre-Alpha",
     "Intended Audience :: Developers",
-    
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
-    
     "Natural Language :: English",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
 
-
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/rserial/spinsolveproc/issues"
 
-
-
 [tool.poetry.scripts]
-spinsolveproc = 'spinsolveproc.cli:main'
-
+spinsolveproc = 'spinsolveproc.cli:app'
 
 [tool.poetry.dependencies]
-python = "<3.12,>=3.8"
-
-click = "^8.1.3"
-plotly = "^5.17.0"
-numpy = "^1.22"
-pandas = "1.5.0"
-h5py = "^3.9.0"
-invoke = "^2.2.0"
-nox = "^2023.4.22"
-nox-poetry = "^1.0.3"
-ipykernel = "^6.27.1"
-nbformat = "^5.9.2"
-pyflint = {git = "https://github.com/rserial/pyflint.git"}
+python = "<3.12,>=3.9"
+typer = {extras = ["all"], version = "^0.12.3"}
+plotly = "^5.22.0"
+numpy = "^1.26.4"
+pandas = "^2.2.2"
+h5py = "^3.11.0"
 nmrglue = {git = "https://github.com/jjhelmus/nmrglue.git"}
-
-
-[tool.poetry.dev-dependencies]
-pre-commit = "^3.1.1"
-invoke = "^2.2.0"
-flake8 = ">=4.0.1,<5.0.0"
-flakeheaven = "^3.2.1"
-flake8-builtins = "^2.1.0"
-flake8-blind-except = "^0.2.1"
-flake8-logging-format = "^0.9.0"
-flake8-bugbear = "^23.2.13"
-flake8-annotations = "^2.9.1"
-flake8-docstrings = "^1.7.0"
-flake8-bandit = "^3.0.0"
-flake8-broken-line = "^0.6.0"
-darglint = "^1.8.1"
-isort = "^5.12.0"
-black = "^23.1.0"
-safety = "^2.4.0b1"
-mypy = "^1.0.1"
-sphinx = "^6.1.3"
-recommonmark = "^0.7.1"
-bump2version = "^1.0.1"
-pytest = "^7.2.2"
-xdoctest = "^1.1.1"
-coverage = {version = "^7.2.1", extras = ["toml"]}
-pytest-cov = "^3.0.0"
-watchdog = {version = "^2.3.1", extras = ["watchmedo"]}
+pyflint = {git = "https://github.com/rserial/pyflint.git"}
 
 [tool.poetry.group.dev.dependencies]
-notebook = "^7.0.6"
+pre-commit = "^3.7.1"
+invoke = "^2.2.0"
+bump2version = "^1.0.1"
+watchdog = {version = "^4.0.1", extras = ["watchmedo"]}
+jupyterlab = "^4.2.1"
+jupyterlab-templates = "^0.5.2"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.2.2"
+xdoctest = "^1.1.4"
+coverage = {version = "^7.5.3", extras = ["toml"]}
+pytest-cov = "^5.0.0"
+
+[tool.poetry.group.linters.dependencies]
+isort = "^5.13.2"
+black = "^24.4.2"
+ruff = "^0.4.8"
+
+[tool.poetry.group.security.dependencies]
+safety = "^3.2.1"
+
+[tool.poetry.group.typing.dependencies]
+mypy = "^1.10.0"
+pandas-stubs = "^2.2.2.240603"
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^7.3.7"
+recommonmark = "^0.7.1"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
@@ -89,7 +73,7 @@ branch = true
 source = ["spinsolveproc"]
 
 [tool.coverage.report]
-fail_under = 100
+fail_under = 10
 exclude_lines = [
   "pragma: no cover",
   "def __repr__",
@@ -105,45 +89,49 @@ show_missing = true
 [tool.coverage.html]
 directory = "htmlcov"
 
-[tool.flakeheaven]
-format = "grouped"
-exclude = ["demo_Proton.ipynb", "demo_T2Bulk.ipynb", "demo_T1.ipynb", "demo_T1IRT2.ipynb", "demo_T2.ipynb"]
-max_line_length = 99
-show_source = true
-docstring-convention = "google"
-extended_default_ignore = []
+[tool.ruff]
+target-version = "py39"
+output-format = "full"
+line-length = 99
+fix = true
+extend-exclude = [
+    "docs/*",
+]
 
+[tool.ruff.lint]
+select = [
+  "E", "F", "W",  # flake8
+  "C",  # mccabe
+  "I",  # isort
+  "N",  # pep8-naming
+  "D",  # flake8-docstrings
+  "ANN",  # flake8-annotations
+  "S",  # flake8-bandit
+  "BLE",  # flake8-blind-except
+  "B",  # flake8-bugbear
+  "A",  # flake8-builtins
+  "G",  # flake8-logging-format
+  "ERA",  # eradicate
+  "ISC",  # flake8-implicit-str-concat
+  "RUF",  # Ruff-specific rules
+]
+ignore = ["ANN101", "ANN401"]
+unfixable = [
+  "ERA",  # Don't remove commented-out code
+]
 
-[tool.flakeheaven.plugins]
-pyflakes = ["+*"]
-pycodestyle = ["+*", "-W503", "-E203"]
-mccabe = ["+*"]
-flake8-annotations = ["+*", "-ANN1??", "-ANN401"]
-flake8-docstrings = ["+*", "-D212"]
-"flake8-*" = ["+*"]
-pylint = ["-C????", "-E????", "+F????", "+I????", "-R????", "-W????"]
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["S101"]
+".jupyter/jupyter_lab_config.py" = ["E501", "ERA001"]
 
-[tool.flakeheaven.exceptions."tests/"]
-flake8-bandit = ["-S101"]
+[tool.ruff.lint.mccabe]
+max-complexity = 10
 
-[tool.mypy]
-warn_return_any = false
-warn_unused_configs = true
+[tool.ruff.lint.isort]
+known-first-party = ["spinsolveproc"]
 
-[[tool.mypy.overrides]]
-module = ["pytest","click.*","invoke.*","nox.*","nox_poetry.*","nmrglue.*","scipy.*","pandas.*","plotly.*","h5py.*"]
-allow_redefinition = false
-check_untyped_defs = true
-ignore_errors = false
-ignore_missing_imports = true
-implicit_reexport = false
-local_partial_types = true
-strict_optional = true
-strict_equality = true
-no_implicit_optional = true
-warn_unused_ignores = true
-warn_unreachable = true
-warn_no_return = true
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [tool.isort]
 multi_line_output = 3
@@ -155,7 +143,26 @@ known_third_party = ["invoke", "nox", "nox_poetry"]
 
 [tool.black]
 line-length = 99
-target-version = ["py37"]
+target-version = ["py39"]
+
+[tool.mypy]
+warn_return_any = true
+warn_unused_configs = true
+
+[[tool.mypy.overrides]]
+module = ["pytest.*", "invoke.*", "nox.*", "nox_poetry.*", "h5py.*", "nmrglue.*", "scipy.*", "plotly.*"]
+allow_redefinition = false
+check_untyped_defs = true
+ignore_errors = false
+ignore_missing_imports = true
+implicit_reexport = true
+local_partial_types = true
+strict_optional = true
+strict_equality = true
+no_implicit_optional = true
+warn_unused_ignores = true
+warn_unreachable = true
+warn_no_return = true
 
 [build-system]
 requires = ["poetry>=0.12"]
