--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,10 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.6
 
-      - name: Set up Python 3.9
+      - name: Set up Python 3.10
         uses: actions/setup-python@v5.1.0
         with:
-          python-version: 3.9
+          python-version: "3.10"
 
       - name: Install system deps
         shell: bash
