--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,10 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.6
 
-      - name: Set up Python 3.9
+      - name: Set up Python 3.10
         uses: actions/setup-python@v5.1.0
         with:
-          python-version: 3.9
+          python-version: "3.10"
 
       - name: Install system deps
         shell: bash
@@ -38,7 +38,7 @@ jobs:
     strategy:
       matrix:
         os: [Ubuntu, MacOS, Windows]
-        python-version: ['3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12']
       fail-fast: true
     steps:
       - uses: actions/checkout@v4.1.6
@@ -81,10 +81,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.6
 
-      - name: Set up Python 3.9
+      - name: Set up Python 3.10
         uses: actions/setup-python@v5.1.0
         with:
-          python-version: 3.9
+          python-version: "3.10"
 
       - name: Install system deps
         shell: bash
