--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,4 +7,4 @@
 # the repo. Unless a later match takes precedence,
 # @rserial will be requested for review when someone opens
 # a pull request.
-*   @rserial
+*   @rserial @fedejaure
