--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ pytest-cov = "^5.0.0"
 isort = "^5.13.2"
 black = "^24.4.2"
 ruff = "^0.6.6"
+nbqa = "^1.9.0"
 
 [tool.poetry.group.security.dependencies]
 safety = "^3.2.5"
@@ -123,6 +124,7 @@ unfixable = [
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["S101"]
 ".jupyter/jupyter_lab_config.py" = ["E501", "ERA001"]
+"examples/*" = ["D100"]
 
 [tool.ruff.lint.mccabe]
 max-complexity = 10
