--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ plotly = "^5.24.1"
 numpy = "^2.1.3"
 pandas = "^2.2.3"
 h5py = "^3.12.1"
-nmrglue = {git = "https://github.com/jjhelmus/nmrglue.git"}
+nmrglue = "^0.11"
 flintpy-nmr = "^0.1.1"
 
 [tool.poetry.group.dev.dependencies]
